# hwh

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  HARDWARE_SYNERGIES.md  MISSING_FEATURES.md  README.md  hwh-development 2.md  textual-tui 2.md
.claude/SKILLS/hardware-hacking-guidance/: SKILL.md
.claude/SKILLS/hardware-hacking-summary/: SKILL.md
.claude/SKILLS/hardware-synergies/: SKILL.md
.claude/SKILLS/hwh-developement/: SKILL.md
.claude/SKILLS/textual-tui/: SKILL.md
Formula/: hwh.rb
scripts/: debug_startup.py  test_bp_sump.py  test_bpio2_status.py  test_bpio2_uart.py
src/hwh/: __init__.py  __main__.py  cli.py  detect.py  glitch_profiles.py
src/hwh/automation/: __init__.py  calibration.py  firmware_analysis.py  la_glitch.py  protocol_replay.py  smart_glitch.py  uart.py  uart_scanner.py
src/hwh/backends/: BACKEND_TODO.md  __init__.py  backend_blackmagic.py  backend_bolt.py  backend_buspirate.py  backend_stlink.py  backend_tigard.py  base.py  sump.py
src/hwh/coordination/: __init__.py  coordinator.py  triggers.py
src/hwh/examples/: 01_device_discovery.py  02_uart_auto_interact.py  03_stm32_rdp_bypass.py  README.md
src/hwh/firmware/: __init__.py  analyzer.py  analyzer_advanced.py  extractor.py  patterns.py  sbom.py  types.py
src/hwh/pybpio/: __init__.py  bpio_1wire.py  bpio_base.py  bpio_client.py  bpio_i2c.py  bpio_spi.py  bpio_uart.py
src/hwh/pybpio/tooling/: __init__.py
src/hwh/pybpio/tooling/bpio/: ConfigurationRequest.py  RequestPacket.py  ResponsePacket.py  ResponsePacketContents.py  StatusResponse.py
src/hwh/tooling/: __init__.py
src/hwh/tooling/bolt/: __init__.py
src/hwh/tui/: REDESIGN.md  __init__.py  app.py  campaign.py  conditions.py  config.py  device_pool.py  logo.py  style.tcss
src/hwh/tui/panels/: __init__.py  base.py  blackmagic.py  bolt.py  buspirate.py  calibration.py  faultycat.py  firmware.py  logic_analyzer.py  protocol_decoders.py  tigard.py  tilink.py  uart_monitor.py
src/hwh/tui/widgets/: __init__.py  confirmation.py
src/hwh/workflows/: __init__.py  adaptive_glitch.py  base.py  glitch_monitor.py
tests/: __init__.py  test_cli.py  test_confirmation_modal.py  test_firmware_security.py  test_tui.py  test_tui_improvements.py
