[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwh"
version = "0.1.0"
description = "Hardware Hacking Toolkit - Multi-device TUI for hardware security research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ResistanceIsUseless" }
]
keywords = [
    "hardware-hacking",
    "security",
    "glitching",
    "spi",
    "i2c",
    "uart",
    "jtag",
    "swd",
    "bus-pirate",
    "curious-bolt",
    "logic-analyzer"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware",
]
dependencies = [
    "textual>=0.47.0",
    "pyserial>=3.5",
    "rich>=13.0.0",
    "click>=8.0.0",
    "cobs>=1.2.0",         # COBS encoding for BPIO2 protocol
    "flatbuffers>=24.0.0", # FlatBuffers for BPIO2 protocol
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
bolt = [
    # Curious Bolt native library (install from bolt repo)
]
buspirate = [
    # pybpio is now bundled in hwh/pybpio
]

[project.scripts]
hwh = "hwh.cli:main"

[project.urls]
Homepage = "https://github.com/ResistanceIsUseless/hwh"
Documentation = "https://github.com/ResistanceIsUseless/hwh#readme"
Repository = "https://github.com/ResistanceIsUseless/hwh"
Issues = "https://github.com/ResistanceIsUseless/hwh/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hwh"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
